[package]
name = "btg"        # b.t.g (bevy tutorial game)
version = "0.1.0"
authors = ["Joe Krywicki <joe.krywicki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }
rand = "0.8"
